fix: remove extra margin bottom at image

--- a/assets/css/blog/featured.css
+++ b/assets/css/blog/featured.css
@@ -2,10 +2,6 @@
     margin-top: 6rem;
 }
 
-.featured-wrapper .u-placeholder {
-    margin-bottom: 3rem;
-}
-
 .featured-wrapper .post-title {
     margin-bottom: 0;
     font-size: 1.8rem;
@@ -47,5 +43,12 @@
     .slide-image {
         width: 100%;
         margin-top: 0px;
+        margin-bottom: 0px;
+    }
+}
+
+@media (min-width: 768px) {
+    .featured-wrapper .u-placeholder {
+        margin-bottom: 3rem;
     }
 }
